add new feature also add docker file with requirement file

--- a/.env
+++ b/.env
@@ -13,3 +13,10 @@ HEALTH_PORT=8088
 SCHED_ENABLE=1
 CIRCUIT_FAIL_THRESHOLD=3
 CIRCUIT_RESET_MINUTES=30
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=bookf826@gmail.com
+SMTP_PASS=lwrg gwcq alrl vaas
+SMTP_FROM=Your App air quality
+SMTP_STARTTLS=1
+
